# labs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  convert.sh  item.cpp  item.h  itemlist.cpp  itemlist.h  main.cpp
src/: dir.cpp  file.cpp  item.cpp  itemlist.cpp  listviewexplorer.cpp  main.cpp  mainwindow.cpp  resources.qrc  size_to_print.cpp
src/forms/: mainwindow.ui
src/headers/: container.h  dir.h  file.h  friend.h  item.h  itemlist.h  listviewexplorer.h  mainwindow.h  stack.h
src/ui/: ui_mainwindow.h
